@@ -20,6 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.ObjectUtils;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author ：谁书-ss
@@ -59,7 +60,7 @@ public class UserServiceImpl implements UserService {
         if (!ObjectUtils.isEmpty(roleInfoList)) {
             userInfoVO.setRoleInfoList(roleInfoList);
             // 权限
-            List<PermissionInfoVo> permissionInfoList = permissionDsl.findPermissionInfoByRoleIdList(roleInfoList.stream().map(RoleInfoVo::getRoleId).toList());
+            List<PermissionInfoVo> permissionInfoList = permissionDsl.findPermissionInfoByRoleIdList(roleInfoList.stream().map(RoleInfoVo::getRoleId).collect(Collectors.toList()));
             if (!ObjectUtils.isEmpty(permissionInfoList)) {
                 userInfoVO.setPermissionInfoList(permissionInfoList);
             }
